--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.0",
+    "bcryptjs": "^3.0.2",
     "cookie": "^1.0.2",
     "dotenv": "^16.5.0",
+    "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.515.0",
     "next": "15.3.3",
     "pg": "^8.11.3",
     "react": "^19.0.0",
@@ -21,6 +24,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cookie": "^0.6.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
